8309751: Duplicate constant pool entries added during default method processing